tetris-interactor/src/snapshots/tetris_interactor__tests__tetris_board-5.snap
---
source: src/main.rs
expression: board.to_string()
---
|          |
|          |
|          |
|          |
|          |
|          |
|          |
|          |
|          |
|          |
|          |
|          |
|          |
|          |
|          |
|          |
|        ##|
|        ##|
|######  ##|
|######  ##|
____________
